# test-harness-cli

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: generate_sample_logs.sh  run_pipeline.sh  setup.sh
src/test_harness/: __init__.py  categorize.py  cli.py  parser.py  report.py
tests/: test_categorize.py  test_parser.py  test_pipeline_integration.py
